botao da tela principal

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                 </div>
             </div>
         </div>
-        
     </section >
-   
+    <div id="botao" class="mt-5">
+        <button type="button" class=" btn btn-secondary botaoEnviar">Prosseguir</button>
+    </div>
   </body>
   <script src="JS/index.js"></script>
 
