--- a/index.html
+++ b/index.html
@@ -52,11 +52,33 @@
                 </div>
             </div>
         </div>
-    </section >
+        <div class="modal" id="modal-comp" role="dialog">
+            <div class="modal-dialog">          
+                <div class="modal-content"> 
+                    <div class="modal-header">
+                        <h4 class="modal-title">
+                            Modal
+                        </h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <label id="modal-alert" class="form-text text-muted">
+                            Carregando...
+                        </label>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                    </div>
+                </div>            
+            </div>
+        </div>    </section >
     <div id="botao" class="mt-5">
-        <button type="button" class=" btn btn-secondary botaoEnviar">Prosseguir</button>
+        <button type="button" class=" btn btn-secondary botaoEnviar" onclick="get()">Prosseguir</button>
     </div>
   </body>
   <script src="JS/index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </html>
