--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!doctype html>
 <html lang="pt">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 
     <title>TetraSeed - Ferramenta de Classificação de sementes</title>
     <link rel="icon" type="image/x-icon" href="Assets/Logo/logo.png">
     <link href="stylesheets/style.css" rel="stylesheet">
 
-  </head>
-  <body style="background-color: #8D3B30">
+</head>
+
+<body style="background-color: #8D3B30">
     <nav class="navbar navbar-light  d-flex justify-content-center" style="background-color: #712F26;">
         <a class="navbar-brand" href="#" style="display: flex;">
             <img src="Assets/Logo/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
             <div style="color: white; padding-left: 12px;">TetraSeed </div>
         </a>
     </nav>
-    <div style="background-color: #fff; padding: 6px 0;" ></div>
-
+    <div style="background-color: #fff; padding: 6px 0;"></div>
     <section class="container-section">
         <div class="container container-drag">
             <label class="drag-title">Parte externa da semente</label>
             <div class="drag-section-external">
                 <div class="drag-section-internal">
-                    <div class="drag-drop" style="display: flex; justify-content: center; align-items: center;" ondrop="dropHandler(event,'externo');"
-                    ondragover="dragOverHandler(event,'externo');">
+                    <div class="drag-drop" style="display: flex; justify-content: center; align-items: center;"
+                        ondrop="dropHandler(event,'externo');" ondragover="dragOverHandler(event,'externo');">
                         <div class="drag-text">
                             <label>Arraste e solte as imagens aqui!</label>
                             <input type="file" name="file" id="imgExt" style="display: none;">
@@ -42,8 +44,9 @@
             <label class="drag-title">Parte interna da semente</label>
             <div class="drag-section-external">
                 <div class="drag-section-internal">
-                    <div class="drag-drop" id="drag-drop" style="display: flex; justify-content: center; align-items: center;" ondrop="dropHandler(event,'interna');"
-                    ondragover="dragOverHandler(event,'interna');">
+                    <div class="drag-drop" id="drag-drop"
+                        style="display: flex; justify-content: center; align-items: center;"
+                        ondrop="dropHandler(event,'interna');" ondragover="dragOverHandler(event,'interna');">
                         <div class="drag-text">
                             <label>Arraste e solte as imagens aqui!</label>
                             <input type="file" name="file" id="imgExt" style="display: none;">
@@ -53,32 +56,40 @@
             </div>
         </div>
         <div class="modal" id="modal-comp" role="dialog">
-            <div class="modal-dialog">          
-                <div class="modal-content"> 
-                    <div class="modal-header">
-                        <h4 class="modal-title">
-                            Modal
-                        </h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
                     <div class="modal-body">
-                        <label id="modal-alert" class="form-text text-muted">
-                            Carregando...
-                        </label>
+                        <div class="row">
+                            <div class="col-md-4 offset-md-4">
+                                <div class="spinner-border"></div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <label id="modal-alert" class="form-text text-muted">
+                                    Estamos processando as imagens...
+                                </label>
+                            </div>
+                        </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-                    </div>
-                </div>            
+                </div>
             </div>
-        </div>    </section >
+        </div>
+    </section>
     <div id="botao" class="mt-5">
-        <button type="button" class=" btn btn-secondary botaoEnviar" onclick="get()">Prosseguir</button>
+        <button type="button" class="btn btn-danger btn-lg botaoEnviar" disabled onclick="get()">Prosseguir</button>
     </div>
-  </body>
-  <script src="JS/index.js"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+<script src="JS/index.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
 </html>
