criacao dos botoes de uplaod na tela principal

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                             <label>Arraste e solte as imagens aqui!</label>
                             <input type="file" name="file" id="imgExt" style="display: none;">
                         </div>
+                        <div id="botao" style="position: absolute; margin-top: 180px" class="">
+                            <button type="button" class=" btn btn-secondary botaoUploade ">Ou faça o upload clicando aqui!!</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -48,6 +51,9 @@
                             <label>Arraste e solte as imagens aqui!</label>
                             <input type="file" name="file" id="imgExt" style="display: none;">
                         </div>
+                    </div>
+                    <div id="botao" style="position: absolute; margin-top: 180px" class="">
+                        <button type="button" class=" btn btn-secondary botaoUploade ">Ou faça o upload clicando aqui!!</button>
                     </div>
                 </div>
             </div>
