finalizando btn prosseguir

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
             <label class="drag-title">Parte externa da semente</label>
             <div class="drag-section-external">
                 <div class="drag-section-internal">
-                    <div class="drag-drop" style="display: flex; justify-content: center; align-items: center;"
+                    <div class="drag-drop" id="drag-drop-ext"
+                        style="display: flex; justify-content: center; align-items: center;"
                         ondrop="dropHandler(event,'externa');" ondragover="dragOverHandler(event,'externa');">
                         <div class="drag-text">
                             <label>Arraste e solte as imagens aqui!
                                 <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
-                            </label> <input type="file" name="file" id="imgExt" style="display: none;" accept="image/*">
+                            </label>
                             <button class="upload-button">
                                 <label for="imgButtonExt">Ou faça o upload clicando aqui!!</label>
-                                <input class="imgInput" style="display: none;" type="file" name="imgButtonExt" id="imgButtonExt"
-                                    name="filename" placeholder="imgButtonExt"
-                                    onchange="uploadImgInput(event,'externa')">
+                                <input type="file" name="imgButtonExt" id="imgButtonExt" style="display: none;"
+                                    accept="image/*" onchange="uploadImgInput(event,'externa')">
                             </button>
                         </div>
                     </div>
@@ -53,19 +53,17 @@
             <label class="drag-title">Parte interna da semente</label>
             <div class="drag-section-external">
                 <div class="drag-section-internal">
-                    <div class="drag-drop" id="drag-drop"
+                    <div class="drag-drop" id="drag-drop-int"
                         style="display: flex; justify-content: center; align-items: center;"
                         ondrop="dropHandler(event,'interna');" ondragover="dragOverHandler(event,'interna');">
                         <div class="drag-text">
                             <label>Arraste e solte as imagens aqui!
                                 <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
                             </label>
-                            <input type="file" name="file" id="imgInt" style="display: none;" accept="image/*">
                             <button class="upload-button">
                                 <label for="imgButtonInt">Ou faça o upload clicando aqui!!</label>
-                                <input class="imgInput" style="display: none;" type="file" name="imgButtonInt" id="imgButtonInt"
-                                    name="filename" placeholder="imgButtonInt"
-                                    onchange="uploadImgInput(event,'interna')">
+                                <input type="file" name="imgButtonInt" id="imgButtonInt" style="display: none;"
+                                    accept="image/*" onchange="uploadImgInput(event,'interna')">
                             </button>
                         </div>
                     </div>
