--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
 </head>
 
 <body style="background-color: #8D3B30">
-    <nav class="navbar navbar-light  d-flex justify-content-center" style="background-color: #712F26;">
-        <a class="navbar-brand" href="#" style="display: flex;">
-            <img src="Assets/Logo/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            <div style="color: white; padding-left: 12px;">TetraSeed </div>
-        </a>
-    </nav>
+    <main-header></main-header>
     <div style="background-color: #fff; padding: 6px 0;"></div>
     <section class="container-section">
         <div class="container container-drag ext">
@@ -96,9 +91,11 @@
     <div id="botao" class="mt-5">
         <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="get()">Prosseguir</button>
     </div>
+    <main-footer></main-footer>
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 <script src="JS/index.js"></script>
+<script src="JS/components/index.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
