--- a/download.html
+++ b/download.html
@@ -21,7 +21,8 @@
     <section class="container-section">
         <div class="container">
             <div class="mt-5 botao">
-                <button type="button" class="btn btn-danger btn-lg botaoDownload" onclick="download()">Download</button>
+                <button type="button" class="btn btn-danger btn-lg" id="botaoDownload" onclick="downloadCsv()">Download</button>
+                <div class="arquivo"></div>
             </div>
             <div class="mt-5 botao">
                 <button 
