sending base64 in json to back

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
     </section>
     <div id="botao" class="mt-5">
-        <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="get()">Prosseguir</button>
+        <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack()">Prosseguir</button>
     </div>
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
