sending data to backend and receiving csv

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body style="background-color: #8D3B30">
     <nav class="navbar navbar-light  d-flex justify-content-center" style="background-color: #712F26;">
-        <a class="navbar-brand" href="#" style="display: flex;">
+        <a class="navbar-brand" onclick="returnHome()" style="display: flex; cursor: pointer;">
             <img src="Assets/Logo/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
             <div style="color: white; padding-left: 12px;">TetraSeed </div>
         </a>
@@ -98,6 +98,7 @@
     </div>
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+<script src="JS/drag-n-drop.js"></script>
 <script src="JS/index.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
