add section de download no index.js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body style="background-color: #8D3B30">
     <main-header></main-header>
-    <section class="container-section">
+    <section class="container-section" id="main-section">
         <div class="container container-drag ext">
             <label class="drag-title">Parte externa da semente</label>
             <div class="drag-section-external">
@@ -70,6 +70,7 @@
     <div class="mt-5 botao">
         <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="get()">Prosseguir</button>
     </div>
+    <download-section id="download-section"></download-section>
     <main-footer></main-footer>
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
