ajuste do preview das imagens upadas

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </div>
             </div>
             <div class="imgExtIconContainer">
+                <img class="imgExtIconContainer" id="preview" src="" width="40%">
             </div>
         </div>
         <div class="container container-drag int">
@@ -63,6 +64,7 @@
                 </div>
             </div>
             <div class="imgIntIconContainer">
+                <img class="imgIntIconContainer" id="previews" src="" width="40%">
             </div>
         </div>
         <modal-loading></modal-loading>
