Criação do componente + separação dos stylos css

--- a/index.html
+++ b/index.html
@@ -112,22 +112,7 @@
         <div class="imgIntIconContainer"></div>
       </div>
       <modal-loading></modal-loading>
-
-      <!-- NEW COMPONENT: TELA DE ERRO -->
-      <div id="error-modal-container">
-        <div class="error-text-container">
-          <img
-            src="Assets/Icons/Error-icon.svg"
-            class="error-icon"
-            alt="Error icon"
-          />
-          <span class="error-text">Ops... Algo de errado aconteceu</span>
-        </div>
-        <button class="error-button">Voltar para o inicio</button>
-      </div>
-
-      <!-- FIM DO NOVO COMPONENTE -->
-
+      <error-modal></error-modal>
       <div id="botao" class="mt-5">
         <button
           type="button"
