--- a/index.html
+++ b/index.html
@@ -1,92 +1,156 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt">
-
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link
+      href=" http://fonts.googleapis.com/css?family=Droid+Sans"
+      rel="stylesheet"
+      type="text/css"
+    />
 
     <title>TetraSeed - Ferramenta de Classificação de sementes</title>
-    <link rel="icon" type="image/x-icon" href="Assets/Logo/logo.png">
-    <link href="stylesheets/style.css" rel="stylesheet">
-</head>
+    <link rel="icon" type="image/x-icon" href="Assets/Logo/logo.png" />
+    <link href="stylesheets/style.css" rel="stylesheet" />
+  </head>
 
-<body style="background-color: #8D3B30">
+  <body style="background-color: #8d3b30">
     <main-header></main-header>
     <section class="container-section" id="main-section">
-        <div class="container container-drag ext">
-            <label class="drag-title">Parte externa da semente</label>
-            <div class="drag-section-external">
-                <div class="drag-section-internal">
-                    <div class="drag-drop" id="drag-drop-ext"
-                        style="display: flex; justify-content: center; align-items: center;"
-                        ondrop="dropHandler(event,'externa');" ondragover="dragOverHandler(event,'externa');">
-                        <div class="drag-text">
-                            <label>Arraste e solte as imagens aqui!
-                                <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
-                            </label>
-                            <button class="upload-button">
-                                <label for="imgButtonExt">Ou faça o upload clicando aqui!!</label>
-                                <input type="file" name="imgButtonExt" id="imgButtonExt" style="display: none;"
-                                    accept="image/*" onchange="uploadImgInput(event,'externa')">
-                            </button>
-                        </div>
-                    </div>
-                </div>
+      <div class="container container-drag ext">
+        <label class="drag-title">Parte externa da semente</label>
+        <div class="drag-section-external">
+          <div class="drag-section-internal">
+            <div
+              class="drag-drop"
+              id="drag-drop-ext"
+              style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              "
+              ondrop="dropHandler(event,'externa');"
+              ondragover="dragOverHandler(event,'externa');"
+            >
+              <div class="drag-text">
+                <label
+                  >Arraste e solte as imagens aqui!
+                  <p style="font-weight: normal">
+                    arquivos aceitos: .jpeg, .jpg
+                  </p>
+                </label>
+                <button class="upload-button">
+                  <label for="imgButtonExt"
+                    >Ou faça o upload clicando aqui!!</label
+                  >
+                  <input
+                    type="file"
+                    name="imgButtonExt"
+                    id="imgButtonExt"
+                    style="display: none"
+                    accept="image/*"
+                    onchange="uploadImgInput(event,'externa')"
+                  />
+                </button>
+              </div>
             </div>
-            <div class="imgExtIconContainer">
-                <img class="imgExtIconContainer" id="preview" src="" width="40%">
-            </div>
+          </div>
         </div>
-        <div class="container container-drag int">
-            <label class="drag-title">Parte interna da semente</label>
-            <div class="drag-section-external">
-                <div class="drag-section-internal">
-                    <div class="drag-drop" id="drag-drop-int"
-                        style="display: flex; justify-content: center; align-items: center;"
-                        ondrop="dropHandler(event,'interna');" ondragover="dragOverHandler(event,'interna');">
-                        <div class="drag-text">
-                            <label>Arraste e solte as imagens aqui!
-                                <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
-                            </label>
-                            <button class="upload-button">
-                                <label for="imgButtonInt">Ou faça o upload clicando aqui!!</label>
-                                <input type="file" name="imgButtonInt" id="imgButtonInt" style="display: none;"
-                                    accept="image/*" onchange="uploadImgInput(event,'interna')">
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="imgIntIconContainer">
-                <img class="imgIntIconContainer" id="previews" src="" width="40%">
-            </div>
+        <div class="imgExtIconContainer">
+          <img class="imgExtIconContainer" id="preview" src="" width="40%" />
         </div>
-        <modal-loading></modal-loading>
-        <div id="botao" class="mt-5">
-            <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack()">Prosseguir</button>
+      </div>
+      <div class="container container-drag int">
+        <label class="drag-title">Parte interna da semente</label>
+        <div class="drag-section-external">
+          <div class="drag-section-internal">
+            <div
+              class="drag-drop"
+              id="drag-drop-int"
+              style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              "
+              ondrop="dropHandler(event,'interna');"
+              ondragover="dragOverHandler(event,'interna');"
+            >
+              <div class="drag-text">
+                <label
+                  >Arraste e solte as imagens aqui!
+                  <p style="font-weight: normal">
+                    arquivos aceitos: .jpeg, .jpg
+                  </p>
+                </label>
+                <button class="upload-button">
+                  <label for="imgButtonInt"
+                    >Ou faça o upload clicando aqui!!</label
+                  >
+                  <input
+                    type="file"
+                    name="imgButtonInt"
+                    id="imgButtonInt"
+                    style="display: none"
+                    accept="image/*"
+                    onchange="uploadImgInput(event,'interna')"
+                  />
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
+        <div class="imgIntIconContainer">
+          <img class="imgIntIconContainer" id="previews" src="" width="40%" />
+        </div>
+      </div>
+      <div id="about">Sobre</div>
+      <div id="team">Equipe</div>
+      <modal-loading></modal-loading>
+      <div id="botao" class="mt-5">
+        <button
+          type="button"
+          class="btn btn-danger btn-lg botaoEnviar"
+          onclick="sendToBack()"
+        >
+          Prosseguir
+        </button>
+      </div>
     </section>
     <download-section id="download-section"></download-section>
     <main-footer></main-footer>
-</body>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-<script src="JS/drag-n-drop.js"></script>
-<script src="JS/index.js"></script>
-<script src="JS/components/index.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  </body>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+  />
+  <script src="JS/drag-n-drop.js"></script>
+  <script src="JS/index.js"></script>
+  <script src="JS/components/index.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-
+    crossorigin="anonymous"
+  ></script>
 </html>
