--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt">
+<html lang="pt-br">
 
 <head>
     <!-- Required meta tags -->
@@ -7,79 +7,154 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'> -->
 
     <title>TetraSeed - Ferramenta de Classificação de sementes</title>
     <link rel="icon" type="image/x-icon" href="Assets/Logo/logo.png">
-    <link href="stylesheets/style.css" rel="stylesheet">
+    <link href="stylesheets/Index.css" rel="stylesheet">
 </head>
 
-<body style="background-color: #8D3B30">
-    <main-header></main-header>
-    <section class="container-section" id="main-section">
-        <div class="container container-drag ext">
-            <label class="drag-title">Parte externa da semente</label>
-            <div class="drag-section-external">
-                <div class="drag-section-internal">
-                    <div class="drag-drop" id="drag-drop-ext"
-                        style="display: flex; justify-content: center; align-items: center;"
-                        ondrop="dropHandler(event,'externa');" ondragover="dragOverHandler(event,'externa');">
-                        <div class="drag-text">
-                            <label>Arraste e solte as imagens aqui!
-                                <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
-                            </label>
-                            <button class="upload-button">
-                                <label for="imgButtonExt">Ou faça o upload clicando aqui!!</label>
-                                <input type="file" name="imgButtonExt" id="imgButtonExt" style="display: none;"
-                                    accept="image/*" onchange="uploadImgInput(event,'externa')">
-                            </button>
+<body>
+    <header class="flex-row">
+        <a href="./index.html">
+            <span class="logo flex-row">
+                <img src="Assets/Logo/logo.png" alt="logo">
+                <strong>Tetra</strong>Seed
+            </span>
+        </a>
+        <nav>
+            <a href="">Inicio</a>
+            <a href="">Sobre</a>
+            <a href="">Equipe</a>
+        </nav>
+    </header>
+    <main>
+        <section class="flex images">
+            <div class=" container-section upload-section flex-row" id="drag-drop-ext" ondrop="dropHandler(event,'externa');" ondragover="dragOverHandler(event,'externa');">
+                <div class="img-container flex">
+                    <div class="img-titles flex">
+                        <h2 class="img-title">Parte <span class="red-text">externa</span> da semente</h2>
+                        <h3>Arraste e solte a imagem aqui</h3>
+                    </div>
+                    <!-- <legend class="img-legend">Nome</legend> -->
+                    <button class="pdi-button">
+                        Ou selecione o arquivo
+                        <!-- <input type="file" name="imgButtonExt" id="imgButtonExt" style="display: none;"
+                        accept="image/*" onchange="uploadImgInput(event,'externa')"> -->
+                    </button>
+                </div>
+                <div class="img-container flex">
+                    <div class="img-titles flex">
+                        <h2 class="img-title">Parte <span  class="red-text">interna</span> da semente</h2>
+                        <h3>Arraste e solte a imagem aqui</h3>
+                    </div>
+                    <!-- <legend class="img-legend">Nome</legend> -->
+                    <button class="pdi-button">
+                        Ou selecione o arquivo
+                        <!-- <input type="file" name="imgButtonExt" id="imgButtonExt" style="display: none;"
+                        accept="image/*" onchange="uploadImgInput(event,'externa')"> -->
+                    </button>
+                </div>
+            </div>
+            <button class="pdi-button">
+                Enviar
+            </button>
+        </section>
+        <section class="about flex-row">
+            <div class="about-text flex">
+                <h2><strong>Sobre a <span class="red-text">TetraSeed</span></strong></h2>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <br/>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="image-replace">
+
+            </div>
+        </section>
+        <section class="team flex">
+            <h2 class="red-text">Equipe</h2>
+            <p><span class="red-text"><strong>Tetra</strong>Seed </span>é um projeto supervisionado pelo Prof. Paulo Cesar Cortez feito em colaboração com a turma de 2022.2 da disciplina de Fundamentos de Processamento Digital de Imagens da Universidade Federal do Ceará.</p>
+            <div class="team-list"></div>
+        </section>
+        <!-- <section class="container-section upload-section">
+            <div class="container container-drag ext">
+                <label class="drag-title">Parte externa da semente</label>
+                <div class="drag-section-external">
+                    <div class="drag-section-internal">
+                        <div class="drag-drop"
+                            style="display: flex; justify-content: center; align-items: center;"
+                            ondrop="dropHandler(event,'externa');" ondragover="dragOverHandler(event,'externa');">
+                            <div class="drag-text">
+                                <label>Arraste e solte as imagens aqui!
+                                    <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
+                                </label>
+                                <button class="upload-button">
+                                    <label for="imgButtonExt">Ou faça o upload clicando aqui!!</label>
+                                    <input type="file" name="imgButtonExt" id="imgButtonExt" style="display: none;"
+                                        accept="image/*" onchange="uploadImgInput(event,'externa')">
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="imgExtIconContainer">
+                    <img class="imgExtIconContainer" id="preview" src="" width="40%">
+                </div>
             </div>
-            <div class="imgExtIconContainer">
-                <img class="imgExtIconContainer" id="preview" src="" width="40%">
-            </div>
-        </div>
-        <div class="container container-drag int">
-            <label class="drag-title">Parte interna da semente</label>
-            <div class="drag-section-external">
-                <div class="drag-section-internal">
-                    <div class="drag-drop" id="drag-drop-int"
-                        style="display: flex; justify-content: center; align-items: center;"
-                        ondrop="dropHandler(event,'interna');" ondragover="dragOverHandler(event,'interna');">
-                        <div class="drag-text">
-                            <label>Arraste e solte as imagens aqui!
-                                <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
-                            </label>
-                            <button class="upload-button">
-                                <label for="imgButtonInt">Ou faça o upload clicando aqui!!</label>
-                                <input type="file" name="imgButtonInt" id="imgButtonInt" style="display: none;"
-                                    accept="image/*" onchange="uploadImgInput(event,'interna')">
-                            </button>
+            <div class="container container-drag int">
+                <label class="drag-title">Parte interna da semente</label>
+                <div class="drag-section-external">
+                    <div class="drag-section-internal">
+                        <div class="drag-drop" id="drag-drop-int"
+                            style="display: flex; justify-content: center; align-items: center;"
+                            ondrop="dropHandler(event,'interna');" ondragover="dragOverHandler(event,'interna');">
+                            <div class="drag-text">
+                                <label>Arraste e solte as imagens aqui!
+                                    <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
+                                </label>
+                                <button class="upload-button">
+                                    <label for="imgButtonInt">Ou faça o upload clicando aqui!!</label>
+                                    <input type="file" name="imgButtonInt" id="imgButtonInt" style="display: none;"
+                                        accept="image/*" onchange="uploadImgInput(event,'interna')">
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="imgIntIconContainer">
+                    <img class="imgIntIconContainer" id="previews" src="" width="40%">
+                </div>
             </div>
-            <div class="imgIntIconContainer">
-                <img class="imgIntIconContainer" id="previews" src="" width="40%">
+            <modal-loading></modal-loading>
+            <div id="botao" class="mt-5">
+                <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack()">Prosseguir</button>
             </div>
-        </div>
-        <modal-loading></modal-loading>
-        <div id="botao" class="mt-5">
-            <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack()">Prosseguir</button>
-        </div>
-    </section>
-    <download-section id="download-section"></download-section>
-    <main-footer></main-footer>
+        </section> -->
+    </main>
+    <footer>
+        <a href="./index.html">
+            <span class="logo flex-row">
+                <img src="Assets/Logo/logo.png" alt="logo">
+                <strong>Tetra</strong>Seed
+            </span>
+        </a>
+        <nav>
+            <a href="">Inicio</a>
+            <a href="">Sobre</a>
+            <a href="">Equipe</a>
+        </nav>
+    </header>
+    </footer>
+    <!-- <download-section id="download-section"></download-section>
+    <main-footer></main-footer> -->
 </body>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"> -->
 <script src="JS/drag-n-drop.js"></script>
 <script src="JS/index.js"></script>
 <script src="JS/components/index.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
@@ -87,6 +162,6 @@
     crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
 
 </html>
