fixing download button

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="botao" class="mt-5">
         <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack()">Gerar Relatório</button>
     </div>
-    <div id="botao" class="mt-5">
+    <div id="botaoImgs" class="mt-5">
         <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack(true)">Gerar Relatório com imagens</button>
     </div>
     <main-footer></main-footer>
