fixing some layout in low resolution screens

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <a href="./index.html">
             <span class="logo flex-row">
                 <img src="Assets/Logo/logo.png" alt="logo">
-                <strong>Tetra</strong>Seed
+                <strong>Tetra</strong>
+                <div>Seed</div>
             </span>
         </a>
         <nav>
@@ -135,11 +136,12 @@
             </div>
         </section> -->
     </main>
-    <footer class="flex-row">
+    <footer class="flex-row" style="align-items: flex-end">
         <a href="./index.html">
             <span class="logo flex-row">
                 <img src="Assets/Logo/logo.png" alt="logo">
-                <strong>Tetra</strong>Seed
+                <strong>Tetra</strong>
+                <div>Seed</div>
             </span>
         </a>
         <nav>
