--- a/index.html
+++ b/index.html
@@ -80,6 +80,188 @@
             <h2 class="red-text">Equipe</h2>
             <p><span class="red-text"><strong>Tetra</strong>Seed </span>é um projeto supervisionado pelo Prof. Paulo Cesar Cortez feito em colaboração com a turma de 2022.2 da disciplina de Fundamentos de Processamento Digital de Imagens da Universidade Federal do Ceará.</p>
             <div class="team-list"></div>
+
+            <div class="list-module list-section">
+                <div class="list-space">
+                    <ul style="margin-bottom: 16px">
+                        <h3 class="list-title">Gerência:</h3>
+                        <li>
+                            <p>Atila Nobrega</p>
+                        </li>
+                        <li>
+                            <p>Lucas Martins</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <h3 class="list-title">Interface:</h3>
+                        <li>
+                            <p>Victor Ehrich (Lider)</p>
+                        </li>
+                        <li>
+                            <p>Mateus Melo</p>
+                        </li>
+                        <li>
+                            <p>Yago Costa</p>
+                        </li>
+                        <li>
+                            <p>Felipe Jonathan</p>
+                        </li>
+                        <li>
+                            <p>Rafael Bruno</p>
+                        </li>
+                        <li>
+                            <p>Breno de Souza</p>
+                        </li>
+                        <li>
+                            <p>Anderson Moura</p>
+                        </li>
+                        <li>
+                            <p>Igor Torquato</p>
+                        </li>
+                        <li>
+                            <p>Thyago Freitas</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list-space">
+                    <ul style="margin-bottom: 16px">
+                        <h3 class="list-title">Pré-processamento:</h3>
+                        <li>
+                            <p>Renato Avelino (Lider)</p>
+                        </li>
+                        <li>
+                            <p>Anna Vithoria (Líder)</p>
+                        </li>
+                        <li>
+                            <p>Leonardo Monteiro</p>
+                        </li>
+                        <li>
+                            <p>Eduardo Monteiro</p>
+                        </li>
+                        <li>
+                            <p>Luann Lucas</p>
+                        </li>
+                        <li>
+                            <p>Paulo Davi</p>
+                        </li>
+                        <li>
+                            <p>Alan de Abreu</p>
+                        </li>
+                        <li>
+                            <p>Carla Mariana</p>
+                        </li>
+                        <li>
+                            <p>Leo Victor</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <h3 class="list-title">Documentação:</h3>
+                        <li>
+                            <p>Nelson Rodrigues (Líder)</p>
+                        </li>
+                        <li>
+                            <p>Antônio Fernandes</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list-space">
+                    <ul style="margin-bottom: 16px">
+                        <h3 class="list-title">Processamento/Pós:</h3>
+                        <li>
+                            <p>Vitor Rosa (Lider)</p>
+                        </li>
+                        <li>
+                            <p>Lucas Noronha (Líder)</p>
+                        </li>
+                        <li>
+                            <p>Vandemberg Monteiro</p>
+                        </li>
+                        <li>
+                            <p>Davi Queiroz</p>
+                        </li>
+                        <li>
+                            <p>Marcos Augusto</p>
+                        </li>
+                        <li>
+                            <p>Danilo Palheta</p>
+                        </li>
+                        <li>
+                            <p>Catherine Bezerra</p>
+                        </li>
+                        <li>
+                            <p>Matheus Rocha</p>
+                        </li>
+                        <li>
+                            <p>Kayann Costa</p>
+                        </li>
+                        <li>
+                            <p>Francisco Thierry</p>
+                        </li>
+                        <li>
+                            <p>Brendon Wesley</p>
+                        </li>
+                        <li>
+                            <p>André Luiz</p>
+                        </li>
+                        <li>
+                            <p>João Marcelo</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list-space">
+                    <ul style="margin-bottom: 16px">
+                        <h3 class="list-title">Classificação:</h3>
+                        <li>
+                            <p>Luan Ícaro (Líder)</p>
+                        </li>
+                        <li>
+                            <p>Ailson Alexandre</p>
+                        </li>
+                        <li>
+                            <p>Neander Danúbioo</p>
+                        </li>
+                        <li>
+                            <p>Tácio Soares</p>
+                        </li>
+                        <li>
+                            <p>Mateus Melo </p>
+                        </li>
+                        <li>
+                            <p>Renan Martins</p>
+                        </li>
+                        <li>
+                            <p>Antonio Wellington</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <h3 class="list-title">Testes:</h3>
+                        <li>
+                            <p>Helano Fontenele (Líder)</p>
+                        </li>
+                        <li>
+                            <p>Nicolas de Carvalho</p>
+                        </li>
+                        <li>
+                            <p>Vitor Gabriel</p>
+                        </li>
+                        <li>
+                            <p>Athur Pinto</p>
+                        </li>
+                        <li>
+                            <p>Lucas SIlva</p>
+                        </li>
+                        <li>
+                            <p>Ismael José</p>
+                        </li>
+                        <li>
+                            <p>Keven da Silva</p>
+                        </li>
+                        <li>
+                            <p>Luan Daniel</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
         <!-- <section class="container-section upload-section">
             <div class="container container-drag ext">
